--- a/package.json
+++ b/package.json
@@ -1,51 +1,54 @@
 {
-  "name": "lingvuin-sapphire",
-  "version": "1.0.0",
-  "main": "dist/index.js",
-  "author": "@sapphire",
-  "license": "UNLICENSE",
-  "type": "commonjs",
-  "dependencies": {
-    "@hokify/agenda": "^6.3.0",
-    "@prisma/client": "^5.0.0",
-    "@sapphire/decorators": "^6.0.2",
-    "@sapphire/discord-utilities": "^3.0.4",
-    "@sapphire/discord.js-utilities": "7.0.1",
-    "@sapphire/fetch": "^2.4.1",
-    "@sapphire/framework": "^4.5.1",
-    "@sapphire/plugin-api": "^5.1.0",
-    "@sapphire/plugin-editable-commands": "^3.0.2",
-    "@sapphire/plugin-logger": "^3.0.5",
-    "@sapphire/plugin-subcommands": "^4.0.2",
-    "@sapphire/time-utilities": "^1.7.10",
-    "@sapphire/type": "^2.4.0",
-    "@sapphire/utilities": "^3.13.0",
-    "@skyra/env-utilities": "^1.2.1",
-    "canvas-gif": "^1.0.3",
-    "colorette": "^2.0.20",
-    "discord.js": "^14.11.0",
-    "prisma": "^5.0.0"
-  },
-  "devDependencies": {
-    "@sapphire/cli": "^1.6.1",
-    "@sapphire/prettier-config": "^2.0.0",
-    "@sapphire/ts-config": "^4.0.1",
-    "@types/node": "^18.17.0",
-    "@types/ws": "^8.5.5",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.0",
-    "tsc-watch": "^6.0.4",
-    "typescript": "^5.1.6"
-  },
-  "scripts": {
-    "sapphire": "sapphire",
-    "generate": "sapphire generate",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "start": "node dist/index.js",
-    "dev": "run-s build start",
-    "watch:start": "tsc-watch --onSuccess \"node ./dist/index.js\"",
-    "format": "prettier --write \"src/**/*.ts\""
-  },
-  "prettier": "@sapphire/prettier-config"
+	"name": "lingvuin-sapphire",
+	"version": "1.0.0",
+	"main": "dist/index.js",
+	"author": "@sapphire",
+	"license": "UNLICENSE",
+	"type": "commonjs",
+	"dependencies": {
+		"@hokify/agenda": "^6.3.0",
+		"@prisma/client": "^5.0.0",
+		"@sapphire/decorators": "^6.0.2",
+		"@sapphire/discord-utilities": "^3.0.4",
+		"@sapphire/discord.js-utilities": "7.0.1",
+		"@sapphire/fetch": "^2.4.1",
+		"@sapphire/framework": "^4.5.1",
+		"@sapphire/plugin-api": "^5.1.0",
+		"@sapphire/plugin-editable-commands": "^3.0.2",
+		"@sapphire/plugin-logger": "^3.0.5",
+		"@sapphire/plugin-subcommands": "^4.0.2",
+		"@sapphire/time-utilities": "^1.7.10",
+		"@sapphire/type": "^2.4.0",
+		"@sapphire/utilities": "^3.13.0",
+		"@skyra/env-utilities": "^1.2.1",
+		"canvas-gif": "^1.0.3",
+		"colorette": "^2.0.20",
+		"discord.js": "^14.11.0",
+		"prisma": "^5.0.0"
+	},
+	"engines": {
+		"node": "17.0.0"
+	},
+	"devDependencies": {
+		"@sapphire/cli": "^1.6.1",
+		"@sapphire/prettier-config": "^2.0.0",
+		"@sapphire/ts-config": "^4.0.1",
+		"@types/node": "^18.17.0",
+		"@types/ws": "^8.5.5",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^3.0.0",
+		"tsc-watch": "^6.0.4",
+		"typescript": "^5.1.6"
+	},
+	"scripts": {
+		"sapphire": "sapphire",
+		"generate": "sapphire generate",
+		"build": "tsc",
+		"watch": "tsc -w",
+		"start": "node dist/index.js",
+		"dev": "run-s build start",
+		"watch:start": "tsc-watch --onSuccess \"node ./dist/index.js\"",
+		"format": "prettier --write \"src/**/*.ts\""
+	},
+	"prettier": "@sapphire/prettier-config"
 }
