--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"canvas-gif": "^1.0.3",
 		"colorette": "^2.0.20",
 		"discord.js": "^14.11.0",
+		"patch-package": "^8.0.0",
 		"prisma": "^5.0.0"
 	},
 	"engines": {
@@ -41,6 +42,7 @@
 		"typescript": "^5.1.6"
 	},
 	"scripts": {
+		"postinstall": "patch-package",
 		"sapphire": "sapphire",
 		"generate": "sapphire generate",
 		"build": "tsc",
