--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
 		"typescript": "^5.1.6"
 	},
 	"scripts": {
+		"generate-prisma": "npx prisma generate",
 		"postinstall": "patch-package",
 		"sapphire": "sapphire",
 		"generate": "sapphire generate",
-		"build": "tsc",
+		"build": "npm run generate-prisma && tsc",
 		"watch": "tsc -w",
 		"start": "node dist/index.js",
 		"dev": "run-s build start",
