--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
 		"generate": "sapphire generate",
 		"build": "npm run generate-prisma && npm run copy-files && tsc",
 		"watch": "tsc -w",
-		"start": "node dist/index.js",
+		"start": "pm2 start dist/index.js",
 		"dev": "run-s build start",
 		"watch:start": "tsc-watch --onSuccess \"node ./dist/index.js\"",
 		"format": "prettier --write \"src/**/*.ts\""
