--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@skyra/env-utilities": "^1.2.1",
 		"@types/sharp": "^0.32.0",
 		"branchy": "^2.0.0",
+		"canvacord": "^5.4.10",
 		"canvas": "^2.11.2",
 		"canvas-gif": "^1.0.3",
 		"colorette": "^2.0.20",
