--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"decode-gif": "^1.0.1",
 		"discord.js": "^14.11.0",
 		"gif-encoder-2": "^1.0.5",
+		"ms": "^2.1.3",
 		"patch-package": "^8.0.0",
 		"prisma": "^5.0.0",
 		"sharp": "^0.32.4"
@@ -43,6 +44,7 @@
 		"@sapphire/cli": "^1.6.1",
 		"@sapphire/prettier-config": "^2.0.0",
 		"@sapphire/ts-config": "^4.0.1",
+		"@types/ms": "^0.7.31",
 		"@types/node": "^18.17.0",
 		"@types/ws": "^8.5.5",
 		"npm-run-all": "^4.1.5",
@@ -56,7 +58,7 @@
 		"postinstall": "patch-package",
 		"sapphire": "sapphire",
 		"generate": "sapphire generate",
-		"build": "npm run generate-prisma && npm run copy-files && tsc",
+		"build": "tsc",
 		"watch": "tsc -w",
 		"start": "pm2 start dist/index.js",
 		"dev": "run-s build start",
